# constantine

./: .gitignore  .travis.yml  ARCHITECTURE.md  Cargo.toml  LICENSE-APACHEv2  LICENSE-MIT  PLANNING.md  README-PERFORMANCE.md  README.md  azure-pipelines.yml  bench_eth_curves_clang_old  bench_eth_curves_gcc_old  compile_flags.txt  config.nims  constantine.nim  constantine.nimble  constantine_121245.nims  eth_eip7594_peerdas.nim  go.mod  go_test.mod  hardy.nim  hardy.nimble  nim.cfg
.REVIEWS/: RID-202605022039-peerdas-perf-fix-rebased2-74d1839c-final-report.md  RID-202605022113-peerdas-perf-fix-rebased2-81784ecd-final-report.md
.cargo/: config.toml
audit/: scoping.md
benchmarks/: .gitignore  bench_bigints.nim  bench_blssig_on_bls12_381_g2.nim  bench_blueprint.nim  bench_ec_g1.nim  bench_ec_g1_batch.nim  bench_ec_g1_msm.nim  bench_ec_g1_msm_bls12_381.nim  bench_ec_g1_msm_bn254_snarks.nim  bench_ec_g1_msm_pasta.nim  bench_ec_g1_msm_vtune.nim  bench_ec_g1_scalar_mul.nim  bench_ec_g1_scalar_mul_vartime.nim  bench_ec_g2.nim  bench_ec_g2_scalar_mul.nim  bench_ec_msm_bandersnatch.nim  bench_ec_msm_bls12_381_g1.nim  bench_ec_msm_bls12_381_g2.nim  bench_ec_msm_bn254_snarks_g1.nim  bench_ec_msm_coeffs_with_zeroes.nim  bench_ec_msm_edwards25519.nim  bench_ec_msm_pasta.nim  bench_ec_msm_precomp_bandersnatch.nim  bench_ec_msm_precomp_bls12_381_g1.nim  bench_ec_swei_proj_g1.nim  bench_elliptic_parallel_template.nim  bench_elliptic_template.nim  bench_eth_bls_signatures.nim  bench_eth_curves.nim  bench_eth_eip2537_subgroup_checks_impact.nim  bench_eth_eip4844_kzg.nim  bench_eth_eip7594_peerdas.nim  bench_eth_evm_modexp_dos.nim  bench_eth_evm_precompiles.nim  bench_ethereum_bls_signatures.nim  bench_ethereum_eip4844_kzg.nim  bench_ethereum_kzg_eip4844.nim  bench_evm_modexp_dos.nim  bench_fft.nim  bench_fft_bit_reversal.nim  (+51 more)
benchmarks-threadpool/: resources.nim  wtime.h
bindings/: README.md  bindings_template.nim  c_curve_decls.nim  c_curve_decls_parallel.nim  c_typedefs.nim  constantine_bls12_381.nim  constantine_pasta.nim  gen_bindings.nim  gen_header.nim  lib_autoload.nim  lib_constantine.nim  lib_curves.nim  lib_hashes.nim  lib_headers.nim  lib_threadpool.nim  macro_curves_bindings.nim
bindings_generators/: constantine_bls12_381.nim  constantine_bn254_snarks.nim  constantine_pasta.nim  gen_bindings.nim  gen_header.nim
changelog/: constantine_v0.1_The_Way_of_Shadows.md  constantine_v0.2_Coat_of_Arms.md
commitments/: kzg_multiproofs.nim
constantine/: README.md  arithmetic.nim  bigint.nim  bigints.nim  bigints_public.nim  bigints_raw.nim  blssig_pop_on_bls12381_g2.nim  common.nim  config.nim  csprngs.nim  curves_config.nim  curves_primitives.nim  curves_primitives_parallel.nim  ec_shortweierstrass.nim  ecdsa_secp256k1.nim  eth_ecdsa_signatures.nim  eth_eip7594_peerdas.nim  ethereum_bls_signatures.nim  ethereum_bls_signatures_parallel.nim  ethereum_eip2333_bls12381_key_derivation.nim  ethereum_eip4844_kzg.nim  ethereum_eip4844_kzg_parallel.nim  ethereum_eip4844_kzg_polynomial_commitments.nim  ethereum_eip4844_kzg_polynomial_commitments_parallel.nim  ethereum_eip7594_kzg.nim  ethereum_evm_precompiles.nim  ethereum_kzg_polynomial_commitments.nim  ethereum_verkle_ipa.nim  ethereum_verkle_primitives.nim  ethereum_verkle_trees.nim  field_arith.nim  field_fp.nim  hashes.nim  io.nim  lowlevel_bigints.nim  lowlevel_elliptic_curves.nim  lowlevel_elliptic_curves_parallel.nim  lowlevel_extension_fields.nim  lowlevel_fields.nim  lowlevel_pairing_curves.nim  (+8 more)
constantine-go/: README.md  constantine.go  constantine_test.go  eth_bls_signatures_test.go  eth_evm_precompiles_test.go  eth_kzg4844_test.go  eth_kzg7594_peerdas_test.go  peerdas_test.go
constantine-rust/constantine-ethereum-evm-precompiles/: Cargo.toml
constantine-rust/constantine-ethereum-evm-precompiles/src/: lib.rs
constantine-rust/constantine-ethereum-evm-precompiles/tests/: t_ethereum_evm_precompiles.rs
constantine-rust/constantine-ethereum-kzg/: Cargo.toml
constantine-rust/constantine-ethereum-kzg/src/: lib.rs
constantine-rust/constantine-ethereum-kzg/tests/: t_eth_kzg7594.rs  t_ethereum_kzg_vectors.rs
constantine-rust/constantine-halo2-zal/: Cargo.toml
constantine-rust/constantine-halo2-zal/benches/: msm.rs
constantine-rust/constantine-halo2-zal/src/: lib.rs
constantine-rust/constantine-halo2-zal/tests/: t_zal_msm_accel.rs
constantine-rust/constantine-zal-halo2kzg/: Cargo.toml
constantine-rust/constantine-zal-halo2kzg/benches/: msm.rs
constantine-rust/constantine-zal-halo2kzg/src/: lib.rs
data_availability_sampling/: eth_peerdas.nim
docs/: crypto-nvidia_gpus.md  crypto-optimizations.md  implementation_nvidia_gpus.md  optimizations.md  zk_accel_layer.md
erasure_codes/: recovery.nim  zero_polynomial.nim
examples/: groth16_proof_example.nim  groth16_prover.org
examples-c/: README.md  ethereum_bls_signatures.c  ethereum_evm_precompiles.c  ethereum_verkle_ipa.c  t_libctt_banderwagon.c  t_libctt_bls12_381.c  t_libctt_keccak.c
examples-threadpool/: e01_simple_tasks.nim  e02_parallel_pi.nim  e03_parallel_for.nim  e04_parallel_reduce.nim
examples_c/: ethereum_bls_signatures.c  t_libctt_bls12_381.c
examples_threadpool/: e01_simple_tasks.nim  e02_parallel_pi.nim  e03_parallel_for.nim  e04_parallel_reduce.nim
formal_verification/: README.md  bls12_381_q_64.c  bls12_381_q_64.nim  timers.nim
hardy/: bool_primitives.nim  ct_primitives.nim  datatypes.nim
helpers/: README.md  explain_bin_size.sh  pararun.nim  prng.nim  prng_unsafe.nim  static_for.nim  timers.nim  x86.nim
include/: README.md  constantine.h  constantine_bls12_381.h  constantine_blssigpop_bls12381g2.h  constantine_bn254_snarks.h  constantine_ethereum_bls_signatures.h  constantine_pasta.h
lib/: .gitignore  README.md
metering/: README.md  eip2537.md  m_eip2537.md  m_eip2537.nim  m_gt_multi_exp.md  m_gt_multiexp.nim  m_kzg_multiproofs.nim  m_kzg_multiproofs_research.nim  m_modexp.nim  m_msm.nim  m_pairings.nim  reports.nim  tracer.nim
papers/: README.md
research/: README.md  banderwagon_lagrange_poly.sage  glv.nim
sage/: README.md  (+33 more)
(+2564 files in other folders)
