[workspace]
resolver = "2"
members = [
    "constantine-rust/constantine-sys",
    "constantine-rust/constantine-curves",
    "constantine-rust/constantine-zal-halo2kzg",
    "constantine-rust/constantine-proto-ethereum-bls-signatures",
]

# If Nim static library is compiled with Clang ThinLTO, enable it on Rust side
# and add the following to ".cargo/config.toml"
#
#    [build]
#    # https://doc.rust-lang.org/rustc/linker-plugin-lto.html
#    rustflags="-Clinker-plugin-lto -Clinker=clang -Clink-arg=-fuse-ld=lld"
#
#
# [profile.dev]
# lto = "thin"
#
# [profile.test]
# lto = "thin"
#
# [profile.release]
# lto = "thin"
#
# [profile.bench]
# lto = "thin"