[package]
name = "constantine-ethereum-kzg"
version = "0.1.0"
edition = "2021"

authors = ["Mamy André-Ratsimbazafy"]
license = "MIT/Apache-2.0"
repository = "https://github.com/mratsim/constantine"

[dependencies]
constantine-sys = { path = "../constantine-sys" }
constantine-core = { path = "../constantine-core" }

[dev-dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_yaml = "0.9"
hex = { version = "0.4", default-features = false, features = ["serde"] }
glob = "0.3"
