[package]
name = "constantine-halo2-zal"
version = "0.1.0"
edition = "2021"

authors = ["Mamy André-Ratsimbazafy"]
license = "MIT/Apache-2.0"
repository = "https://github.com/mratsim/constantine"

[dependencies]
constantine-sys = { path = "../constantine-sys" }
constantine-core = { path = "../constantine-core" }
halo2curves = { git = 'https://github.com/taikoxyz/halo2curves', branch = "pr-pse-exec-engine" }

[dev-dependencies]
ark-std = "0.3"
rand_core = { version = "0.6", default-features = false }

# Benchmark-only dependencies
criterion = { version = "0.3", features = ["html_reports"] }
rand_xorshift = "0.3"
maybe-rayon = { version = "0.1.0", default-features = false }

# In CI "asm" needs to be disabled as some agents don't support ADX.
halo2curves = { git = 'https://github.com/taikoxyz/halo2curves', branch = "pr-pse-exec-engine", features = ["multicore"]}

[[bench]]
name = "msm"
harness = false
# bench with `cargo bench --features halo2curves/asm -- msm`
# to enable halo2curves with all optimizations