[package]
name = "constantine-halo2-zal"
version = "0.1.0"
edition = "2021"

authors = ["Mamy André-Ratsimbazafy"]
license = "MIT/Apache-2.0"
repository = "https://github.com/mratsim/constantine"

[dependencies]
constantine-sys = { path = "../constantine-sys" }
constantine-core = { path = "../constantine-core" }
halo2_middleware = { git = 'https://github.com/privacy-scaling-explorations/halo2' }

[dev-dependencies]
ark-std = "0.3"
rand_core = { version = "0.6", default-features = false }

# Benchmark-only dependencies
criterion = { version = "0.3", features = ["html_reports"] }
rand_xorshift = "0.3"
rayon = "1.8"

# In CI "asm" needs to be disabled as some agents don't support ADX.
# halo2curves = { git = 'https://github.com/taikoxyz/halo2curves', branch = "pr-pse-exec-engine" }

[[bench]]
name = "msm"
harness = false
# bench with `cargo bench --features halo2curves/asm -- msm`
# to enable halo2curves with all optimizations