[package]
name = "constantine-zal-halo2curves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constantine-sys = { path = "../constantine-sys" }
halo2curves = { git = 'https://github.com/taikoxyz/halo2curves', branch = "pr-pse-exec-engine" }

[dev-dependencies]
ark-std = "0.3"
rand_core = { version = "0.6", default-features = false }
num_cpus = "1.16.0"