[package]
name = "constantine-zal-halo2kzg"
version = "0.1.0"
edition = "2021"

authors = ["Mamy André-Ratsimbazafy"]
license = "MIT/Apache-2.0"
repository = "https://github.com/mratsim/constantine"

[dependencies]
constantine-sys = { path = "../constantine-sys" }
halo2curves = { git = 'https://github.com/taikoxyz/halo2curves', branch = "pr-pse-exec-engine" }

[dev-dependencies]
ark-std = "0.3"
rand_core = { version = "0.6", default-features = false }
num_cpus = "1.16.0"

# Benchmark-only dependencies
criterion = { version = "0.3", features = ["html_reports"] }
rand_xorshift = "0.3"
maybe-rayon = { version = "0.1.0", default-features = false }

# Ensure we bench Halo2curves with full optimizations
# In CI "asm" needs to be disabled as some agents don't support ADX.
halo2curves = { git = 'https://github.com/taikoxyz/halo2curves', branch = "pr-pse-exec-engine", features = ["multicore", "asm"]}

[[bench]]
name = "msm"
harness = false
